--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     }
 
     // 特定文字の有無をチェック
-    const targets = ["彦", "左", "衛", "門", "カ", "ニ"];
+    const targets = ["彦", "左", "衛", "門"];
     if (targets.every(t => input.includes(t))) {
       result += "\n... おでの名前が見つかりました。で？\n";
     } else {
@@ -78,3 +78,4 @@
 </script>
 </body>
 </html>
+
